# elastic-claude

./: .gitignore  README.md  create-issues.sh
cli/: Cargo.toml
cli/src/: config.rs  docker.rs  main.rs
cli/src/commands/: add.rs  chat.rs  current_chat.rs  destroy.rs  get.rs  ingest.rs  init.rs  mod.rs  search.rs  start.rs  status.rs  stop.rs
docker/: init.sql
skill/: SKILL.md
skill/references/: schema.md
