[package]
name = "elastic-claude"
version = "0.1.0"
edition = "2021"
description = "Local search infrastructure for project knowledge"
license = "MIT"
repository = "https://github.com/Kirill-Babkin/elastic-claude"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Docker API
bollard = "0.18"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Home directory resolution
dirs = "5.0"

# Error handling
anyhow = "1.0"

# Glob patterns
glob = "0.3"

# Async utilities
futures-util = "0.3"
